1S2024/Clase_Extra_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTBLOCK
    NUMBER
    STRING
    TIPONUMBER

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     instruccion -> funcion_instr
Rule 10    instruccion -> call_funcion_instr
Rule 11    instruccion -> interface_instr
Rule 12    instruccion -> return_instr
Rule 13    instruccion -> break_instr
Rule 14    break_instr -> BREAK PUNTOCOMA
Rule 15    return_instr -> RETURN expresion PUNTOCOMA
Rule 16    return_instr -> RETURN PUNTOCOMA
Rule 17    interface_instr -> INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
Rule 18    interface_params -> interface_params PUNTOCOMA ID DOSPUNTOS expresion
Rule 19    interface_params -> ID DOSPUNTOS expresion
Rule 20    imprimir_instr -> CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
Rule 21    declaracion_instr -> LET ID IGUAL expresion PUNTOCOMA
Rule 22    asignacion_instr -> ID IGUAL expresion PUNTOCOMA
Rule 23    if_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 24    funcion_instr -> FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 25    call_funcion_instr -> ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
Rule 26    if_else_instr -> IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
Rule 27    expresion -> expresion MAS expresion
Rule 28    expresion -> expresion MENOS expresion
Rule 29    expresion -> expresion POR expresion
Rule 30    expresion -> expresion DIVIDIDO expresion
Rule 31    expresion -> expresion MAYQUE expresion
Rule 32    expresion -> expresion MENQUE expresion
Rule 33    expresion -> expresion IGUALQUE expresion
Rule 34    expresion -> expresion NIGUALQUE expresion
Rule 35    expresion -> expresion MENORIGUAL expresion
Rule 36    expresion -> MENOS expresion
Rule 37    expresion -> PARIZQ expresion PARDER
Rule 38    expresion -> ENTERO
Rule 39    expresion -> CADENA
Rule 40    expresion -> ID
Rule 41    expresion -> ID PUNTO ID
Rule 42    expresion -> ID PARIZQ expresion COMA expresion PARDER

Terminals, with rules where they appear

BREAK                : 14
CADENA               : 39
COMA                 : 24 25 42
COMMENTBLOCK         : 
CONSOLE              : 20
DIVIDIDO             : 30
DOSPUNTOS            : 18 19
ELSE                 : 26
ENTERO               : 38
FUNCTION             : 24
ID                   : 17 18 19 21 22 24 24 24 25 40 41 41 42
IF                   : 23 26
IGUAL                : 21 22
IGUALQUE             : 33
INTERFACE            : 17
LET                  : 21
LLAVDER              : 17 23 24 26 26
LLAVIZQ              : 17 23 24 26 26
LOG                  : 20
MAS                  : 27
MAYQUE               : 31
MENORIGUAL           : 35
MENOS                : 28 36
MENQUE               : 32
NIGUALQUE            : 34
NUMBER               : 
PARDER               : 20 23 24 25 26 37 42
PARIZQ               : 20 23 24 25 26 37 42
POR                  : 29
PUNTO                : 20 41
PUNTOCOMA            : 14 15 16 17 18 20 21 22 23 24 25 26
RETURN               : 15 16
STRING               : 
TIPONUMBER           : 
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
break_instr          : 13
call_funcion_instr   : 10
declaracion_instr    : 5
expresion            : 15 18 19 20 21 22 23 25 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 42 42
funcion_instr        : 9
if_else_instr        : 8
if_instr             : 7
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 23 24 26 26
interface_instr      : 11
interface_params     : 17 18
return_instr         : 12

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . funcion_instr
    (10) instruccion -> . call_funcion_instr
    (11) instruccion -> . interface_instr
    (12) instruccion -> . return_instr
    (13) instruccion -> . break_instr
    (20) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (21) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (22) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (23) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (24) funcion_instr -> . FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (25) call_funcion_instr -> . ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
    (17) interface_instr -> . INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
    (15) return_instr -> . RETURN expresion PUNTOCOMA
    (16) return_instr -> . RETURN PUNTOCOMA
    (14) break_instr -> . BREAK PUNTOCOMA

    CONSOLE         shift and go to state 14
    LET             shift and go to state 15
    ID              shift and go to state 16
    IF              shift and go to state 17
    FUNCTION        shift and go to state 18
    INTERFACE       shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    funcion_instr                  shift and go to state 9
    call_funcion_instr             shift and go to state 10
    interface_instr                shift and go to state 11
    return_instr                   shift and go to state 12
    break_instr                    shift and go to state 13

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . funcion_instr
    (10) instruccion -> . call_funcion_instr
    (11) instruccion -> . interface_instr
    (12) instruccion -> . return_instr
    (13) instruccion -> . break_instr
    (20) imprimir_instr -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA
    (21) declaracion_instr -> . LET ID IGUAL expresion PUNTOCOMA
    (22) asignacion_instr -> . ID IGUAL expresion PUNTOCOMA
    (23) if_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) if_else_instr -> . IF PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (24) funcion_instr -> . FUNCTION ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (25) call_funcion_instr -> . ID PARIZQ expresion COMA expresion PARDER PUNTOCOMA
    (17) interface_instr -> . INTERFACE ID LLAVIZQ interface_params PUNTOCOMA LLAVDER
    (15) return_instr -> . RETURN expresion PUNTOCOMA
    (16) return_instr -> . RETURN PUNTOCOMA
    (14) break_instr -> . BREAK PUNTOCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 14
    LET             shift and go to state 15
    ID              shift and go to state 16
    IF              shift and go to state 17
    FUNCTION        shift and go to state 18
    INTERFACE       shift and go to state 19
    RETURN          shift and go to state 20
    BREAK           shift and go to state 21

    instruccion                    shift and go to state 22
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    funcion_instr                  shift and go to state 9
    call_funcion_instr             shift and go to state 10
    interface_instr                shift and go to state 11
    return_instr                   shift and go to state 12
    break_instr                    shift and go to state 13

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    CONSOLE         reduce using rule 4 (instruccion -> imprimir_instr .)
    LET             reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    FUNCTION        reduce using rule 4 (instruccion -> imprimir_instr .)
    INTERFACE       reduce using rule 4 (instruccion -> imprimir_instr .)
    RETURN          reduce using rule 4 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVDER         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion_instr .

    CONSOLE         reduce using rule 5 (instruccion -> declaracion_instr .)
    LET             reduce using rule 5 (instruccion -> declaracion_instr .)
    ID              reduce using rule 5 (instruccion -> declaracion_instr .)
    IF              reduce using rule 5 (instruccion -> declaracion_instr .)
    FUNCTION        reduce using rule 5 (instruccion -> declaracion_instr .)
    INTERFACE       reduce using rule 5 (instruccion -> declaracion_instr .)
    RETURN          reduce using rule 5 (instruccion -> declaracion_instr .)
    BREAK           reduce using rule 5 (instruccion -> declaracion_instr .)
    $end            reduce using rule 5 (instruccion -> declaracion_instr .)
    LLAVDER         reduce using rule 5 (instruccion -> declaracion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    CONSOLE         reduce using rule 6 (instruccion -> asignacion_instr .)
    LET             reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    FUNCTION        reduce using rule 6 (instruccion -> asignacion_instr .)
    INTERFACE       reduce using rule 6 (instruccion -> asignacion_instr .)
    RETURN          reduce using rule 6 (instruccion -> asignacion_instr .)
    BREAK           reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    LLAVDER         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> if_instr .

    CONSOLE         reduce using rule 7 (instruccion -> if_instr .)
    LET             reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    FUNCTION        reduce using rule 7 (instruccion -> if_instr .)
    INTERFACE       reduce using rule 7 (instruccion -> if_instr .)
    RETURN          reduce using rule 7 (instruccion -> if_instr .)
    BREAK           reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .

    CONSOLE         reduce using rule 8 (instruccion -> if_else_instr .)
    LET             reduce using rule 8 (instruccion -> if_else_instr .)
    ID              reduce using rule 8 (instruccion -> if_else_instr .)
    IF              reduce using rule 8 (instruccion -> if_else_instr .)
    FUNCTION        reduce using rule 8 (instruccion -> if_else_instr .)
    INTERFACE       reduce using rule 8 (instruccion -> if_else_instr .)
    RETURN          reduce using rule 8 (instruccion -> if_else_instr .)
    BREAK           reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVDER         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) instruccion -> funcion_instr .

    CONSOLE         reduce using rule 9 (instruccion -> funcion_instr .)
    LET             reduce using rule 9 (instruccion -> funcion_instr .)
    ID              reduce using rule 9 (instruccion -> funcion_instr .)
    IF              reduce using rule 9 (instruccion -> funcion_instr .)
    FUNCTION        reduce using rule 9 (instruccion -> funcion_instr .)
    INTERFACE       reduce using rule 9 (instruccion -> funcion_instr .)
    RETURN          reduce using rule 9 (instruccion -> funcion_instr .)
    BREAK           reduce using rule 9 (instruccion -> funcion_instr .)
    $end            reduce using rule 9 (instruccion -> funcion_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> funcion_instr .)


state 10

    (10) instruccion -> call_funcion_instr .

    CONSOLE         reduce using rule 10 (instruccion -> call_funcion_instr .)
    LET             reduce using rule 10 (instruccion -> call_funcion_instr .)
    ID              reduce using rule 10 (instruccion -> call_funcion_instr .)
    IF              reduce using rule 10 (instruccion -> call_funcion_instr .)
    FUNCTION        reduce using rule 10 (instruccion -> call_funcion_instr .)
    INTERFACE       reduce using rule 10 (instruccion -> call_funcion_instr .)
    RETURN          reduce using rule 10 (instruccion -> call_funcion_instr .)
    BREAK           reduce using rule 10 (instruccion -> call_funcion_instr .)
    $end            reduce using rule 10 (instruccion -> call_funcion_instr .)
    LLAVDER         reduce using rule 10 (instruccion -> call_funcion_instr .)


state 11

    (11) instruccion -> interface_instr .

    CONSOLE         reduce using rule 11 (instruccion -> interface_instr .)
    LET             reduce using rule 11 (instruccion -> interface_instr .)
    ID              reduce using rule 11 (instruccion -> interface_instr .)
    IF              reduce using rule 11 (instruccion -> interface_instr .)
    FUNCTION        reduce using rule 11 (instruccion -> interface_instr .)
    INTERFACE       reduce using rule 11 (instruccion -> interface_instr .)
    RETURN          reduce using rule 11 (instruccion -> interface_instr .)
    BREAK           reduce using rule 11 (instruccion -> interface_instr .)
    $end            reduce using rule 11 (instruccion -> interface_instr .)
    LLAVDER         reduce using rule 11 (instruccion -> interface_instr .)


state 12

    (12) instruccion -> return_instr .

    CONSOLE         reduce using rule 12 (instruccion -> return_instr .)
    LET             reduce using rule 12 (instruccion -> return_instr .)
    ID              reduce using rule 12 (instruccion -> return_instr .)
    IF              reduce using rule 12 (instruccion -> return_instr .)
    FUNCTION        reduce using rule 12 (instruccion -> return_instr .)
    INTERFACE       reduce using rule 12 (instruccion -> return_instr .)
    RETURN          reduce using rule 12 (instruccion -> return_instr .)
    BREAK           reduce using rule 12 (instruccion -> return_instr .)
    $end            reduce using rule 12 (instruccion -> return_instr .)
    LLAVDER         reduce using rule 12 (instruccion -> return_instr .)


state 13

    (13) instruccion -> break_instr .

    CONSOLE         reduce using rule 13 (instruccion -> break_instr .)
    LET             reduce using rule 13 (instruccion -> break_instr .)
    ID              reduce using rule 13 (instruccion -> break_instr .)
    IF              reduce using rule 13 (instruccion -> break_instr .)
    FUNCTION        reduce using rule 13 (instruccion -> break_instr .)
    INTERFACE       reduce using rule 13 (instruccion -> break_instr .)
    RETURN          reduce using rule 13 (instruccion -> break_instr .)
    BREAK           reduce using rule 13 (instruccion -> break_instr .)
    $end            reduce using rule 13 (instruccion -> break_instr .)
    LLAVDER         reduce using rule 13 (instruccion -> break_instr .)


state 14

    (20) imprimir_instr -> CONSOLE . PUNTO LOG PARIZQ expresion PARDER PUNTOCOMA

    PUNTO           shift and go to state 23


state 15

    (21) declaracion_instr -> LET . ID IGUAL expresion PUNTOCOMA

    ID              shift and go to state 24


state 16

    (22) asignacion_instr -> ID . IGUAL expresion PUNTOCOMA
    (25) call_funcion_instr -> ID . PARIZQ expresion COMA expresion PARDER PUNTOCOMA

    IGUAL           shift and go to state 25
    PARIZQ          shift and go to state 26


state 17

    (23) if_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) if_else_instr -> IF . PARIZQ expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    PARIZQ          shift and go to state 27


state 18

    (24) funcion_instr -> FUNCTION . ID PARIZQ ID COMA ID PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA

    ID              shift and go to state 28


state 19

    (17) interface_instr -> INTERFACE . ID LLAVIZQ interface_params PUNTOCOMA LLAVDER

    ID              shift and go to state 29


state 20

    (15) return_instr -> RETURN . expresion PUNTOCOMA
    (16) return_instr -> RETURN . PUNTOCOMA
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIVIDIDO expresion
    (31) expresion -> . expresion MAYQUE expresion
    (32) expresion -> . expresion MENQUE expresion
    (33) expresion -> . expresion IGUALQUE expresion
    (34) expresion -> . expresion NIGUALQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . PARIZQ expresion PARDER
    (38) expresion -> . ENTERO
    (39) expresion -> . CADENA
    (40) expresion -> . ID
    (41) expresion -> . ID PUNTO ID
    (42) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    PUNTOCOMA       shift and go to state 31
    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    CADENA          shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 30

state 21

    (14) break_instr -> BREAK . PUNTOCOMA

    PUNTOCOMA       shift and go to state 37


state 22

    (2) instrucciones -> instrucciones instruccion .

    CONSOLE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INTERFACE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVDER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 23

    (20) imprimir_instr -> CONSOLE PUNTO . LOG PARIZQ expresion PARDER PUNTOCOMA

    LOG             shift and go to state 38


state 24

    (21) declaracion_instr -> LET ID . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 39


state 25

    (22) asignacion_instr -> ID IGUAL . expresion PUNTOCOMA
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIVIDIDO expresion
    (31) expresion -> . expresion MAYQUE expresion
    (32) expresion -> . expresion MENQUE expresion
    (33) expresion -> . expresion IGUALQUE expresion
    (34) expresion -> . expresion NIGUALQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . PARIZQ expresion PARDER
    (38) expresion -> . ENTERO
    (39) expresion -> . CADENA
    (40) expresion -> . ID
    (41) expresion -> . ID PUNTO ID
    (42) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    CADENA          shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 40

state 26

    (25) call_funcion_instr -> ID PARIZQ . expresion COMA expresion PARDER PUNTOCOMA
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIVIDIDO expresion
    (31) expresion -> . expresion MAYQUE expresion
    (32) expresion -> . expresion MENQUE expresion
    (33) expresion -> . expresion IGUALQUE expresion
    (34) expresion -> . expresion NIGUALQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . PARIZQ expresion PARDER
    (38) expresion -> . ENTERO
    (39) expresion -> . CADENA
    (40) expresion -> . ID
    (41) expresion -> . ID PUNTO ID
    (42) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    CADENA          shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 41

state 27

    (23) if_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (26) if_else_instr -> IF PARIZQ . expresion PARDER LLAVIZQ instrucciones LLAVDER ELSE LLAVIZQ instrucciones LLAVDER PUNTOCOMA
    (27) expresion -> . expresion MAS expresion
    (28) expresion -> . expresion MENOS expresion
    (29) expresion -> . expresion POR expresion
    (30) expresion -> . expresion DIVIDIDO expresion
    (31) expresion -> . expresion MAYQUE expresion
    (32) expresion -> . expresion MENQUE expresion
    (33) expresion -> . expresion IGUALQUE expresion
    (34) expresion -> . expresion NIGUALQUE expresion
    (35) expresion -> . expresion MENORIGUAL expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . PARIZQ expresion PARDER
    (38) expresion -> . ENTERO
    (39) expresion -> . CADENA
    (40) expresion -> . ID
    (41) expresion -> . ID PUNTO ID
    (42) expresion -> . ID PARIZQ expresion COMA expresion PARDER

    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    CADENA          shift and go to state 35
    ID              shift and go to state 36
